# serializer version: 1
# name: test_all_entities[sensor.investments_dr_evil_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.investments_dr_evil_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.INVESTMENT: 'mdi:chart-areaspline'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-4k5l6m7n-8o9p-1q2r-3s4t_balance',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_all_entities[sensor.investments_dr_evil_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'Investments Dr Evil Balance',
      'icon': <AccountType.INVESTMENT: 'mdi:chart-areaspline'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.investments_dr_evil_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000000.00',
  })
# ---
# name: test_all_entities[sensor.investments_dr_evil_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.investments_dr_evil_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-4k5l6m7n-8o9p-1q2r-3s4t_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.investments_dr_evil_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'Investments Dr Evil Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.investments_dr_evil_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T13:55:19+00:00',
  })
# ---
# name: test_all_entities[sensor.investments_my_checking_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.investments_my_checking_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.CHECKING: 'mdi:checkbook'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-1k2l3m4n-5o6p-7q8r-9s0t_balance',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_all_entities[sensor.investments_my_checking_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'Investments My Checking Balance',
      'icon': <AccountType.CHECKING: 'mdi:checkbook'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.investments_my_checking_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12345.67',
  })
# ---
# name: test_all_entities[sensor.investments_my_checking_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.investments_my_checking_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-1k2l3m4n-5o6p-7q8r-9s0t_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.investments_my_checking_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'Investments My Checking Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.investments_my_checking_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T13:55:19+00:00',
  })
# ---
# name: test_all_entities[sensor.investments_nerdcorp_series_b_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.investments_nerdcorp_series_b_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.INVESTMENT: 'mdi:chart-areaspline'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-5k6l7m8n-9o0p-1q2r-3s4t_balance',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_all_entities[sensor.investments_nerdcorp_series_b_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'Investments NerdCorp Series B Balance',
      'icon': <AccountType.INVESTMENT: 'mdi:chart-areaspline'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.investments_nerdcorp_series_b_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '13579.24',
  })
# ---
# name: test_all_entities[sensor.investments_nerdcorp_series_b_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.investments_nerdcorp_series_b_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-5k6l7m8n-9o0p-1q2r-3s4t_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.investments_nerdcorp_series_b_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'Investments NerdCorp Series B Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.investments_nerdcorp_series_b_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T13:55:19+00:00',
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_castle_mortgage_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mythical_randomsavings_castle_mortgage_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.UNKNOWN: 'mdi:cash'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-7a8b9c0d-1e2f-3g4h-5i6j_balance',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_castle_mortgage_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'Mythical RandomSavings Castle Mortgage Balance',
      'icon': <AccountType.UNKNOWN: 'mdi:cash'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mythical_randomsavings_castle_mortgage_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7500.00',
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_castle_mortgage_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.mythical_randomsavings_castle_mortgage_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-7a8b9c0d-1e2f-3g4h-5i6j_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_castle_mortgage_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'Mythical RandomSavings Castle Mortgage Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mythical_randomsavings_castle_mortgage_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T18:16:42+00:00',
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_unicorn_pot_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mythical_randomsavings_unicorn_pot_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.UNKNOWN: 'mdi:cash'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-6a7b8c9d-0e1f-2g3h-4i5j_balance',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_unicorn_pot_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'Mythical RandomSavings Unicorn Pot Balance',
      'icon': <AccountType.UNKNOWN: 'mdi:cash'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mythical_randomsavings_unicorn_pot_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10000.00',
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_unicorn_pot_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.mythical_randomsavings_unicorn_pot_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-6a7b8c9d-0e1f-2g3h-4i5j_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.mythical_randomsavings_unicorn_pot_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'Mythical RandomSavings Unicorn Pot Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mythical_randomsavings_unicorn_pot_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T18:16:42+00:00',
  })
# ---
# name: test_all_entities[sensor.random_bank_costco_anywhere_visa_r_card_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.random_bank_costco_anywhere_visa_r_card_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.CREDIT_CARD: 'mdi:credit-card'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-3a4b5c6d-7e8f-9g0h-1i2j_balance',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_all_entities[sensor.random_bank_costco_anywhere_visa_r_card_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'Random Bank Costco Anywhere Visa® Card Balance',
      'icon': <AccountType.CREDIT_CARD: 'mdi:credit-card'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.random_bank_costco_anywhere_visa_r_card_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-532.69',
  })
# ---
# name: test_all_entities[sensor.random_bank_costco_anywhere_visa_r_card_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.random_bank_costco_anywhere_visa_r_card_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-3a4b5c6d-7e8f-9g0h-1i2j_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.random_bank_costco_anywhere_visa_r_card_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'Random Bank Costco Anywhere Visa® Card Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.random_bank_costco_anywhere_visa_r_card_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T18:16:42+00:00',
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_prime_savings_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.the_bank_of_go_prime_savings_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.SAVINGS: 'mdi:piggy-bank-outline'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-2a3b4c5d-6e7f-8g9h-0i1j_balance',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_prime_savings_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'The Bank of Go PRIME SAVINGS Balance',
      'icon': <AccountType.SAVINGS: 'mdi:piggy-bank-outline'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.the_bank_of_go_prime_savings_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9876.54',
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_prime_savings_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.the_bank_of_go_prime_savings_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-2a3b4c5d-6e7f-8g9h-0i1j_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_prime_savings_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'The Bank of Go PRIME SAVINGS Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.the_bank_of_go_prime_savings_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T18:14:21+00:00',
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_the_bank_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.the_bank_of_go_the_bank_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': <AccountType.UNKNOWN: 'mdi:cash'>,
    'original_name': 'Balance',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'account_ACT-1a2b3c4d-5e6f-7g8h-9i0j_balance',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_the_bank_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'monetary',
      'friendly_name': 'The Bank of Go The Bank Balance',
      'icon': <AccountType.UNKNOWN: 'mdi:cash'>,
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.the_bank_of_go_the_bank_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7777.77',
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_the_bank_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.the_bank_of_go_the_bank_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'simplefin',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'account_ACT-1a2b3c4d-5e6f-7g8h-9i0j_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.the_bank_of_go_the_bank_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by SimpleFIN API',
      'device_class': 'timestamp',
      'friendly_name': 'The Bank of Go The Bank Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.the_bank_of_go_the_bank_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-16T14:04:03+00:00',
  })
# ---
